# Simple-Tuner

./: .dockerignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
deployment/: Dockerfile  Dockerfile.android  build_apk_in_docker.sh  nginx.conf  run_container.sh  stop_container.sh
ios/Runner/: Info.plist
lib/: main.dart
lib/core/constants/: audio_constants.dart  ui_constants.dart
lib/core/dependency_injection/: injection_container.dart
lib/core/error/: exceptions.dart  failures.dart
lib/core/ffi/: ffi_structures.dart  native_audio_bindings.dart
lib/core/usecases/: usecase.dart
lib/data/: data_exports.dart
lib/data/datasources/: audio_datasource.dart  audio_datasource_native.dart  audio_datasource_web.dart  local_storage_datasource.dart
lib/data/models/: guitar_string_model.dart  models_exports.dart  note_model.dart  tuning_result_model.dart  tuning_settings_model.dart
lib/data/repositories/: audio_repository_impl.dart  settings_repository_impl.dart
lib/domain/entities/: guitar_string.dart  note.dart  tuning_result.dart  tuning_settings.dart
lib/domain/repositories/: audio_repository.dart  settings_repository.dart
lib/domain/usecases/: get_tuning_stream.dart  request_microphone_permission.dart  start_tuning.dart  stop_tuning.dart
lib/presentation/app/: app.dart
lib/presentation/bloc/: bloc_exports.dart
lib/presentation/bloc/permission/: permission_bloc.dart  (+2 more)
lib/presentation/pages/: permission_page.dart  settings_page.dart  tuner_page.dart
lib/presentation/theme/: app_theme.dart
lib/presentation/widgets/: note_display.dart  tuner_led_circle.dart
native/: CMakeLists.txt
native/include/: audio_processor.h
native/src/: audio_processor.cpp
test/: widget_test.dart
test/domain/entities/: note_test.dart
test/domain/usecases/: start_tuning_test.dart
web/: index.html  manifest.json
(+8 files in other folders)
